Более элегантный SQL-конструктор. Небольшие исправления опечаток.

--- a/buffer/buffer.html
+++ b/buffer/buffer.html
@@ -54,7 +54,7 @@ $buff.a.b.c.d.e.f[abc]
 <h2>Интерфейс хеша</h2>
 
 <p>Перебор значений.</p>
-<p>Допольнительно доступна переменная ^$position, хранящая текущую итерацию.</p>
+<p>Дополнительно доступна переменная ^$position, хранящая текущую итерацию.</p>
 
 <p>^$buff:<br/>
 ^buff.foreach[k;v]{
@@ -109,7 +109,7 @@ $fk
 
 <h2>Дополнительные методы</h2>
 
-<p>Прекроем существующие ключи</p>
+<p>Перекроем существующие ключи</p>
 ^buff.$fk.redefine[
 	$.login[redefined]
 	$.password[redefined]
