Класс, позволяющий установить значения по ключу, трактуя точки в его имени как разделители уровней.

--- a/buffer/buffer.html
+++ b/buffer/buffer.html
@@ -128,6 +128,20 @@ $fk
 
 <p>Каждое изменение данных приводило к записи буфера на диск оператором save.</p>
 
+<h2>Буквальные ключи</h2>
+
+<p>Иногда нужно трактовать ключи буквально, рассматривая точки в именах как разделители уровней.</p>
+<p>Это позволяет делать класс lbuffer.</p>
+
+$lbuff[^lbuffer::create[]]
+
+<p>Добавим несколько значений, указав ключи в виде строк с точками.</p>
+
+$lbuff.[q.w.e.r.t.y][value]
+^lbuff.[q.w.e.z.t.y].add[$.another[value]]
+
+^print[$lbuff]
+
 
 @save[data]
 $s[^json:string[$data]]
